# locatejson

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
example/: mapping.json
src/: CMakeLists.txt  appConfig.h.in  exceptions.hpp  main.cpp  main.hpp  postinst  postrm
src/jsondb/: JsonIndex.cpp  JsonIndex.hpp  JsonStringLiteral.cpp  JsonStringLiteral.hpp
src/locatedb/: LocateDb.cpp  LocateDb.hpp  Order.hpp
test/: CMakeLists.txt  dynamic_analysis_wrapper.sh
test/static/: CMakeLists.txt  static_analysis.sh
test/system/: CMakeLists.txt  dynamic_analysis_wrapper.sh  invalid.db  run_test.sh  test_invalid.sh  test_valid.sh  valid.db  valid_expected.json
test/unit/: CMakeLists.txt  FileTestData.hpp  JsonIndex_test.cpp  JsonStringLiteral_test.cpp  LocateDb_test.cpp  Order_test.cpp
test/unit/Testing/Temporary/: CTestCostData.txt
