cmake_minimum_required (VERSION 2.6)
project (locatejson)
set(app_VERSION_MAJOR 0)
set(app_VERSION_MINOR 1)
set(app_VERSION_REL 1)

if (NOT CMAKE_BUILD_TYPE)
        message(STATUS "Build type not specified - defaulting to Release")
        set(CMAKE_BUILD_TYPE Release)
endif()

set(EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/build/${CMAKE_BUILD_TYPE}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/build/${CMAKE_BUILD_TYPE}/lib")
set(SRC_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/build/src")
list(APPEND CMAKE_CXX_FLAGS "-std=c++11" ${CMAKE_CXX_FLAGS})

INSTALL(PROGRAMS ${EXECUTABLE_OUTPUT_PATH}/locatejson DESTINATION bin)

set(CMAKE_INSTALL_PREFIX "/opt/locatejson")
set(CPACK_PACKAGE_VERSION ${VERSION})
set(CPACK_PACKAGE_NAME "locatejson")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "locateJson: a tool for converting mlocate databases to JSON")
set(CPACK_PACKAGE_RELEASE "${app_VERSION_REL}")
set(CPACK_PACKAGE_VERSION "${app_VERSION_MAJOR}.${app_VERSION_MINOR}")
set(CPACK_PACKAGE_CONTACT "James Mistry (https://sourceforge.net/u/jmistry/profile/send_message)")
set(CPACK_PACKAGE_VENDOR "James Mistry")
set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}.${CMAKE_SYSTEM_PROCESSOR}")
set(CPACK_RPM_POST_INSTALL_SCRIPT_FILE "${PROJECT_SOURCE_DIR}/src/postinst")
set(CPACK_RPM_POST_UNINSTALL_SCRIPT_FILE "${PROJECT_SOURCE_DIR}/src/postrm")
set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${PROJECT_SOURCE_DIR}/src/postinst;${PROJECT_SOURCE_DIR}/src/postrm")
include(CPack)

enable_testing()

add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/src")
add_subdirectory ("${CMAKE_CURRENT_SOURCE_DIR}/test")
